--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,4 +1,20 @@
  // this is area is for reserved class
+body, p, i, li, a, b, strong, div, span {
+   word-wrap: break-word;
+}
+
+body:lang(km), p:lang(km), li:lang(km), a:lang(km), b:lang(km), strong:lang(km), div:lang(km), span:lang(km) {
+	font-family: 'nida_odormeancheyregular', sans-serif;
+	letter-spacing: -0.5px;
+}
+
+.lazyload {
+    opacity: 0;
+    -webkit-transition: opacity 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+    -o-transition: opacity 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+    transition: opacity 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+}
+
 #main-wrapper {
 	position: relative;
 	overflow: hidden;
@@ -24,7 +40,7 @@
 .bp-ab { position:absolute; }
 .co-black { color: $coBlack; }
 .co-white { color: $coWhite; }
-.bp-tt { text-transform: uppercase; }
+/*.bp-tt { text-transform: uppercase; }*/
 .pad-edge { padding-left: 15px; padding-right: 15px; }
 .bp-img {
   img { max-width: 100%; height: auto; }
@@ -39,6 +55,19 @@
 // this is area is for reserved class
 
 // you can include here the rest of your class name eg. home page
+
+pre {
+	font-weight: 100;
+	font-size: 24px;
+	color: $defaultColor;
+	padding-bottom: 25px;
+	white-space: normal;
+
+	@include breakpoint(tablet2) {
+		font-size: 20px;
+		padding-bottom: 15px;
+	}
+}
 
 
 strong, b {
@@ -58,6 +87,9 @@ strong, b {
 	border-radius: 8px;
 	outline: none;
 	cursor: pointer;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
 
 	&:hover {
 		background: $coDarkBlue;
@@ -70,20 +102,34 @@ strong, b {
 		margin-left: 15px;
 		font-size: 18px;
 		vertical-align: middle;
+		position: relative;
+		top: -1px;
 	}
 
 	&.btn-small {
 		min-width: 220px;
 		text-align: center;
 		padding: 9px 20px;
+
+		@include breakpoint(tablet2) {
+			padding: 9px 15px;
+		}
 	}
 
 	&.btn-medium {
 		padding: 9px 30px;
+
+		@include breakpoint(tablet2) {
+			padding: 9px 15px;
+		}
 	}
 
 	&.btn-large {
 		padding: 9px 40px;
+
+		@include breakpoint(tablet2) {
+			padding: 9px 15px;
+		}
 	}
 
 	&.btn-green {
@@ -110,6 +156,10 @@ strong, b {
 		border-radius: 12px;
 	}
 
+	&.btn-block {
+		display: block;
+	}
+
 	&.spec {
 		background-color:  $coDarkBlue;
 		text-transform: capitalize;
@@ -132,7 +182,7 @@ strong, b {
 	background-position: right 20px top 14px;
 	background-size: 90px;
 	display: inline-block;
-	width: 435px;
+	width: 100%;
 	line-height: 1;
 	font-size: 31px;
 	font-weight: 400;
@@ -140,15 +190,15 @@ strong, b {
 	@include border-radius(10px);
 
 	@include breakpoint(tablet2) {
-		width: 300px;
-    font-size: 21px;
+		max-width: 300px;
+    	font-size: 21px;
 		background-position: right 18px top 14px;
 		background-size: 53px;
 		padding: 20px 80px 21px 20px;
 	}
 
 	@include breakpoint(mobile) {
-		width: 250px;
+		width: 100%;
 		font-size: 18px;
 		background-position: right 18px top 14px;
 		background-size: 35px;
@@ -212,6 +262,13 @@ strong, b {
 	    background-repeat: no-repeat !important;
 	    background-size: 100% !important;
 
+	    @include breakpoint(tablet2) {
+	    	background-attachment: initial !important;
+			background-position: center center !important;
+		    background-repeat: no-repeat !important;
+		    background-size: cover !important;
+	    }
+
 	}
 
 	.layout-1:first-child {
@@ -254,7 +311,7 @@ strong, b {
 .bg-grey {
 	background: #f2f2f2;
 	padding: 45px 0;
-	margin-top: 45px;
+	/*margin-top: 45px;*/
 	margin-bottom: 0px;
 
 	+ .bg-grey {
@@ -326,6 +383,7 @@ strong, b {
 		margin-bottom: 30px;
 		float: none;
 		clear: both;
+		text-align: left;
 
 		@include breakpoint(tablet) {
 			font-size: 35px;
@@ -345,7 +403,7 @@ strong, b {
 	h3, h4, h5, h6 {
 		color: $coBlue;
 		margin-bottom: 5px;
-		margin-top: 10px;
+		margin-top: 0px;
 	}
 
 	.btn {
@@ -356,6 +414,15 @@ strong, b {
 			margin-bottom: 20px;
 		}
 	}
+
+	img {
+		max-width: 100%;
+		height: auto;
+	}
+
+	h4 + p {
+		padding-top: 20px;
+	}
 }
 
 .sec-parallax {
@@ -365,6 +432,7 @@ strong, b {
 		h2, h1, h3, h4, h5, h6 {
 			color: $coWhite;
 			font-weight: 500;
+			text-align: center;
 		}
 	}
 }
@@ -431,27 +499,45 @@ strong, b {
 }
 
 .right-img-wrap {
-	max-width: 100%;
 	height: auto;
 	display: block;
+	margin-bottom: 25px;
+	float: right;
+	max-width: 405px;
 
 	@include breakpoint(tablet2) {
-		margin-top: 25px;
+		margin-bottom: 20px;
 	}
 
 	&.img-right {
 		position: relative;
 		right: 0px;
+		width: 100%;
 
 		@include breakpoint(tablet) {
 			right: 0;
+			float: none;
+			margin: 10px auto 0;
+		}
+
+		@include breakpoint(tablet2) {
+			margin-bottom: 15px;
 		}
 	}
 
 	img {
-		max-width: 100%;
+		width: 100%;
 		height: auto;
 		display: block;
+		max-width: 405px;
+		float: right;
+		border-radius: 4px;
+
+		@include breakpoint(tablet2) {
+			float: none;
+			clear: both;
+		}
+		
 	}
 }
 
@@ -481,6 +567,18 @@ strong, b {
 }
 
 .right-img-detail {
+	clear: both;
+	float: right;
+	max-width: 405px;
+	margin-bottom: 25px;
+	text-align: center;
+	width: 100%;
+
+	@include breakpoint(tablet2) {
+		max-width: 100%;
+		float: none;
+		margin-bottom: 15px;
+	}
 
 	h4 {
 		font-weight: 500;
@@ -496,6 +594,10 @@ strong, b {
 	text-decoration: none;
 	letter-spacing: 0.5px;
 	text-transform: uppercase;
+
+	&:hover {
+		color: darken($coBlue, 8%);
+	}
 }
 
 .c-blue {
@@ -526,7 +628,7 @@ strong, b {
 }
 
 ul.bullets, ul.cross {
-	padding: 20px 0;
+	padding: 15px 0 25px;
 
 	@include breakpoint(tablet2) {
 		padding: 10px 0;
@@ -577,23 +679,24 @@ ul.icons {
 .layout-1 {
 
 	ul {
-		padding: 20px 0;
+		padding: 15px 0 25px;
 
-	&.icons {
-		li {
-			margin-bottom: 5px;
-			padding-left: 42px;
-			position: static;
+		&.icons {
 
-			&:before {
-				display: none;
+			li {
+				margin-bottom: 5px;
+				padding-left: 42px;
+				position: static;
+
+				&:before {
+					display: none;
+				}
 			}
 		}
-	}
 
 
 		@include breakpoint(tablet2) {
-			padding: 10px 0;
+			padding: 10px 0 15px;
 		}
 
 		li {
@@ -622,8 +725,8 @@ ul.icons {
 }
 
 ul.cross {
-	padding-bottom: 40px;
-	padding-top: 40px;
+	padding-bottom: 25px;
+	padding-top: 15px;
 
 	@include breakpoint(tablet) {
 		padding-bottom: 20px;
@@ -787,16 +890,19 @@ ul.cross {
 }
 
 .col-list {
+	padding: 0px 15px;
 
-	ul {
+	> ul {
 		text-align: center;
 		padding: 0;
 
-		li {
+
+		> li {
 			display: inline-block;
 			text-align: center;
 			padding-bottom: 15px;
 			padding-left: 0;
+			background: #fff;
 
 			&:before {
 				content:'';
@@ -857,6 +963,8 @@ ul.cross {
 	}
 
 	&.col-list-2 {
+		padding: 0;
+
 		> ul {
 			margin: 0px -15px;
 
@@ -906,9 +1014,28 @@ ul.cross {
 	}
 
 	&.col-list-4 {
+		display: flex;
+		margin: 0px -10px;
+
+		@include breakpoint(tablet2) {
+			margin: 0px -15px;
+		}
 
 		> ul {
 			margin: 0px -15px;
+			display: flex;
+		    -webkit-box-orient: vertical;
+		    -webkit-box-direction: normal;
+		    flex-direction: row;
+		    flex-wrap: nowrap;
+
+		    @include breakpoint(tablet2) {
+		    	flex-wrap: wrap;
+		    }
+
+		    @include breakpoint(tablet2) {
+		    	margin: 0px -2%;
+		    }
 
 			&:after {
 				content:'';
@@ -919,11 +1046,21 @@ ul.cross {
 
 			> li {
 				width: 25%;
-				display: inline-block;
-				float: left;
+				display: flex;
+			    flex-direction: column;
+			    -webkit-box-orient: vertical;
+			    -webkit-box-direction: normal;
+			    margin: 0px 10px;
+
+			    @include breakpoint(tablet) {
+			    	width: 33.33%;
+			    }
 
 				@include breakpoint(tablet2) {
-					width: 50%;
+					width: 46%;
+					margin-bottom: 15px;
+					margin-left: 2%;
+					margin-right: 2%;
 
 					&:nth-child(2n + 1) {
 						clear: left;
@@ -1056,16 +1193,20 @@ ul.cross {
 	p {
 		font-size: 14px;
 		padding: 0px 15px;
+		text-align: left;
 	}
 
 	img {
 		max-width: 100%;
 		display: inline-block;
 		height: auto;
-		margin-bottom: 15px;
+		margin-bottom: 0px;
 	}
 
 	ul {
+		margin: 15px -15px 0;
+		padding: 15px 15px 15px;
+		border-top: 1px solid #efefef;
 
 		li {
 			list-style-type: none;
@@ -1104,6 +1245,15 @@ ul.cross {
 	h5, h4, h3, h2, h6 {
 		margin-bottom: 15px;
 	}
+
+	p {
+		font-weight: 100;
+		font-size: 20px;
+		color: #6d6e71;
+		padding-bottom: 25px;
+		white-space: normal;
+		text-align: left;
+	}
 }
 
 .col-num {
@@ -1113,6 +1263,7 @@ ul.cross {
 	color: $coBlue;
 	margin-bottom: 15px;
 	font-family: $fontA;
+	display: none;
 
 	@include breakpoint(tablet2) {
 		display: none;
@@ -1135,6 +1286,12 @@ table {
 	border: 1px solid $coLightBlue;
 	box-shadow: 0px 0px 5px rgba($coBlack, 0.1);
 
+	@include breakpoint(mobile) {
+		xmargin: 0px -15px;
+		font-size: 12px;
+		width: auto;
+	}
+
 
 	th {
 		background: $coBlue;
@@ -1143,6 +1300,10 @@ table {
 		padding: 15px 20px;
 		font-family: $fontA;
 		font-size: 16px;
+
+		@include breakpoint(mobile) {
+			font-size: 10px;
+		}
 
 		/*&:nth-child(2) {
 			width: 80px !important;
@@ -1169,6 +1330,11 @@ table {
 			padding: 6px 10px;
 		}
 
+		@include breakpoint(mobile) {
+			padding: 5px;
+			font-size: 10px;
+		}
+
 	}
 
 	tr {
@@ -1187,7 +1353,7 @@ table {
 }
 
 ol {
-	padding: 20px 0px 20px 18px;
+	padding: 15px 0px 25px 18px;
 	font-size: 16px;
 
 	@include breakpoint(tablet2) {
@@ -1196,7 +1362,7 @@ ol {
 
 	li {
 		list-style-type: decimal;
-		margin-bottom: 5px;
+		margin-bottom: 10px;
 		position: relative;
 	}
 }
@@ -1206,12 +1372,13 @@ ol {
 
 	.item {
 		margin: 0px 5px;
+		text-align: center;
 	}
 }
 
 .partners-img-wrap {
 	border: 1px solid $coLightBlue;
-	padding: 0px 5px;
+	margin-bottom: 5px;
 }
 
 .owl-dots {
@@ -1307,7 +1474,9 @@ ol {
 
 
 .space-bottom {
-	padding-top: 120px;
+	padding-top: 160px;
+	clear: both;
+	float: none;
 
 	@include breakpoint(phablet) {
 		padding-top: 0;
@@ -1331,6 +1500,9 @@ ol {
 		outline: none;
 		resize: none;
 		font-family: $fontA;
+		-webkit-appearance: none;
+		-moz-appearance: none;
+		appearance: none;
 
 		&::-webkit-input-placeholder { /* Chrome/Opera/Safari */
 			color: #bbb;
@@ -1351,6 +1523,38 @@ ol {
 		}
 	}
 
+	&.input-w-search-btn {
+		position: relative;
+
+
+		input[type="text"] {
+			text-overflow: ellipsis;
+			padding-right: 50px;
+		}
+
+		button {
+			position: absolute;
+			right: 0;
+			color: $coDarkGreen;
+			border: none;
+			outline: none;
+			background: transparent;
+			font-size: 20px;
+			height: calc(100% - 5px);
+			padding: 0px 10px;
+			z-index: 99;
+			top: 2px;
+			-webkit-appearance: none;
+			-moz-appearance: none;
+			appearance: none;
+
+			i {
+				position: relative;
+				top: -2px;
+			}
+		}
+	}
+
 	textarea {
 		min-height: 180px;
 	}
@@ -1359,6 +1563,23 @@ ol {
 		width: 48%;
 		margin: 0px 1%;
 		float: left;
+	}
+}
+
+.circle-bullets {
+	padding-left: 18px;
+	position: relative;
+
+	&:before {
+		content: '';
+		display: block;
+		width: 6px;
+		height: 6px;
+		border-radius: 50%;
+		border: 1px solid #00adef;
+		position: absolute;
+		top: 11px;
+		left: 0;
 	}
 }
 
@@ -1396,10 +1617,12 @@ ol {
 			.required-tooltip {
 				visibility: visible;
 				opacity: 1;
+				bottom: auto;
+				top: 100%;
 			}
 
 			input[type="text"], input[type="email"], input[type="tel"], input[type="number"], textarea  {
-				border-bottom: 1px solid #480505;
+				border-bottom: 1px solid #b51111;
 			}
 		}
 
@@ -1422,7 +1645,7 @@ ol {
 	bottom: 3px;
 
 	p {
-		color: #480505;
+		color: #b51111;
 		padding: 0px 5px;
 		margin-top: 0;
 		margin-bottom: 0px;
@@ -1441,7 +1664,7 @@ ol {
 	}
 
 	.box-cc {
-		padding: 20px 15px 20px;
+		padding: 20px 25px 15px;
 		margin-bottom: 20px;
 		box-shadow: none;
 
@@ -1507,13 +1730,13 @@ a img.aligncenter {display: block; margin-left: auto; margin-right: auto; margin
 	display: block;
 	position: relative;
 	height: 35px;
-	background: transparent;
+	background: #fff;
 	box-sizing: border-box;
 	border: 1px solid $coLightBlue;
 	border-radius: 6px;
 
 	.error & {
-		border-bottom: 1px solid #480505;
+		border-bottom: 1px solid #b51111;
 	}
 
 	&:after {
@@ -1722,4 +1945,146 @@ a img.aligncenter {display: block; margin-left: auto; margin-right: auto; margin
 			width: 100px;
 		}
 	}
+}
+
+#section-0 {
+
+	.space-bottom {
+		padding-top: 60px;
+
+		@include breakpoint(tablet2) {
+			padding-top: 30px;
+		}
+
+		.home-wrap-section & {
+			padding-top: 120px;
+
+			@include breakpoint(tablet2) {
+				padding-top: 0;
+			}
+		}
+	}
+}
+
+
+
+.fb-page-like {
+	display: none;
+
+	@include breakpoint(tablet2) {
+		
+	}
+}
+
+.box-video-wrap {
+	max-width: 405px;
+	float: right;
+	height: 0;
+	padding-bottom: 75%;
+	width: 100%;
+	position: relative;
+
+	@include breakpoint(tablet2) {
+		max-width: 100%;
+		float: none;
+		clear: both;
+	}
+
+
+	iframe {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+	}
+}
+
+#transfer-partner {
+
+	a {
+		width: 100%;
+		display: block;
+		text-align: center;
+		font-weight: 500;
+		margin-bottom: 15px;
+		vertical-align: middle;
+		margin: 0 auto 25px;
+		border-bottom: 1px solid blue;
+		display: block;
+		padding-bottom: 15px;
+
+		img {
+			max-width: 120px;
+			display: inline-block;
+			height: auto;
+		}
+	}
+}
+
+.is-video {
+	max-width: 405px;
+	width: 100%;
+	float: right;
+	margin-bottom: 25px;
+
+	@include breakpoint(tablet2) {
+		float: none;
+		max-width: 100%;
+		margin-bottom: 15px;
+	}
+}
+
+#contactForm {
+	margin: 30px 0 0 0;
+
+	.btn {
+		margin-top: 0;
+	}
+}
+
+.logo-c-listings {
+	text-align: center;
+	max-width: 800px;
+	margin: 0 auto;
+
+	@include breakpoint(tablet2) {
+		margin: 0px -5px;
+		width: 100%;
+	}
+
+	li {
+		display: inline-block;
+		text-align: center;
+		padding: 5px 10px !important;
+	    list-style-type: none;
+	    vertical-align: middle;
+
+	    @include breakpoint(tablet2) {
+	    	padding: 5px 5px !important;
+	    }
+
+
+	    &:before {
+	    	content:'';
+	    	display: none !important;
+	    }
+
+		img {
+			max-height: 35px;
+			width: auto;
+		}
+	}
+}
+
+body:lang(km) .sec-menu-fix-wrap .btn {
+	font-size: 13px;
+}
+
+body:lang(km) .sec-menu ul li {
+	padding: 0px 10px;
+}
+
+body:lang(km) .sec-menu ul li > a {
+	font-size: 13px;
 }
