--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -10,3 +10,69 @@
 	}
 
 }
+
+@media screen and (min-width: 768px) {
+
+	.training-side-menu {
+
+		.mobile-custom-dropdown {
+
+			&:before {
+				display: none;
+			}
+
+			> .selected {
+				display: none;
+			}
+
+			.custom-dropdown-menu {
+				display: block !important;
+				top: auto;
+				background: none;
+				border: none;
+				padding: 5px 0 !important;
+				margin: 0 !important;
+				position: relative;
+			}
+
+			ul {
+
+				li {
+					position: relative;
+
+					a {
+						color: $defaultColor;
+						text-transform: capitalize;
+						padding-left: 0;
+					}
+
+					&.w-siblings {
+
+						&:after {
+							content: "\f078";
+						    display: inline-block;
+						    font: normal normal normal 14px/1 FontAwesome;
+						    font-size: inherit;
+						    text-rendering: auto;
+						    -webkit-font-smoothing: antialiased;
+						    -moz-osx-font-smoothing: grayscale;
+						    font-size: 10px;
+						    position: absolute;
+						    top: 12px;
+						    right: 4px;
+						    color: #b2c224;
+						    margin-top: -7px;
+						    z-index: 101;
+						}
+
+						ul {
+							padding-left: 15px;
+						}
+					}
+				}
+			}
+		}
+
+
+	}	
+}
