--- a/scss/pages/_careers.scss
+++ b/scss/pages/_careers.scss
@@ -15,6 +15,11 @@
 	}
 }
 
+.careers-wrap {
+	margin: 30px 0 0;
+	padding: 0px;
+}
+
 .careers-icon, .filter-icon {
 	width: 82px;
 	height: 82px;
@@ -41,6 +46,11 @@
 	}
 }
 
+.filter-icon {
+	width: 62px;
+	height: 62px;
+}
+
 .row-careers-bg, .filter-bg {
 
 	ul {
@@ -53,6 +63,11 @@
 			border-bottom: 1px solid #eee;
 			padding-bottom: 8px;
 
+			#bank-partners-builder & {
+				min-height: 70px;
+				padding-left: 80px;
+			}
+
 
 			&:before {
 				content:'';
@@ -60,7 +75,7 @@
 			}
 
 			@include breakpoint(phablet) {
-				padding-left: 60px;
+				padding-left: 70px;
 				min-height: 57px;
 				padding-bottom: 10px;
 				margin-bottom: 8px;
@@ -214,12 +229,19 @@
 }
 
 .careers-filter, .the-filter {
-	padding-bottom: 10px;
-	border-bottom: 1px solid $coLightBlue;
+	margin-bottom: 25px;
+	background: $coLightBlue;
+	padding: 8px 15px;
+	border-radius: 4px;
+
+	@include breakpoint(mobile) {
+		padding: 8px 10px;
+	}
 
 	label {
 		display: inline-block;
 		padding-top: 9px;
+		color: $coWhite;
 
 		@include breakpoint(tablet2) {
 			padding-bottom: 5px;
@@ -228,6 +250,27 @@
 
 	.input-wrap {
 		margin: 0;
+
+		@include breakpoint(tablet2) {
+			margin-bottom: 5px;
+		}
+	}
+
+	.input-wrap input[type="text"], .input-wrap input[type="email"], .input-wrap input[type="tel"], .input-wrap input[type="number"], .input-wrap textarea {
+		background: $coWhite;
+
+		&::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+		  color: #333;
+		}
+		&::-moz-placeholder { /* Firefox 19+ */
+		  color: #333;
+		}
+		&:-ms-input-placeholder { /* IE 10+ */
+		  color: #333;
+		}
+		&:-moz-placeholder { /* Firefox 18- */
+		  color: #333;
+		}
 	}
 
 	.col-sm-4 {
