--- a/scss/pages/_news.scss
+++ b/scss/pages/_news.scss
@@ -342,6 +342,7 @@
 			display: inline-block;
 			text-align: center;
 			margin: 0px 1px;
+			vertical-align: middle;
 
 			a {
 				border: 1px solid $coLightBlue;
@@ -369,6 +370,7 @@
 					position: relative;
 					top: -1px;
 					font-size: 20px;
+					line-height: 27px;
 				}
 			}
 		}
